--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,2 @@
-*.js linguist-language=shell
-*.css linguist-language=shell
-*.html linguist-language=shell
+*.ini linguist-language=shell
+*.conf linguist-language=shell
