--- a/nginx.conf
+++ b/nginx.conf
@@ -60,32 +60,31 @@ http {
 
 
 
-
 	server {
-		listen       80;
-		server_name  127.0.0.1;
-		root   /home/work/cms/app/public;
-		index index.html index.htm index.php;
-		charset utf8;
+	     listen       80;
+	     server_name  127.0.0.1;
 
+	     #access_log  logs/host.access.log  main;
 
-		location / {
-			autoindex on;
-			autoindex_exact_size off;
-			autoindex_localtime on;
-			#try_files $uri $uri/ /index.php?$query_string;
-		}
+	     location / {
+	         root   /home/work/cms/app/public;
+	         index  index.html index.htm index.php;
+	         try_files $uri $uri/ /index.php?$query_string;
+	     }
 
-		location ~ .*\.(php|php5)?$
-		{
+	     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
 
-			fastcgi_pass php_cluster;
-			fastcgi_index index.php;
-			include fastcgi.conf;
-			error_page   405 =200 @405;
-		}
-	}
+	     location ~ \.php$ {
+	         root           /home/work/cms/app/public;
+	         fastcgi_pass   127.0.0.1:9000;
+	         fastcgi_index  index.php;
+	         fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
 
+	         include        fastcgi_params;
+	         fastcgi_param SCRIPT_FILENAME   $document_root$fastcgi_script_name;
+	         include        fastcgi.conf;
+	     }
 
+	 }
 
 }
