--- a/fpm/config/phpfpm/php-cli.ini
+++ b/fpm/config/phpfpm/php-cli.ini
@@ -741,7 +741,10 @@ extension_dir = "/usr/local/php/lib/php/extensions/no-debug-zts-20160303"
 extension = event.so
 extension = redis.so
 extension = pthreads.so
-
+extension = swoole.so
+extension = yaml.so
+extension = msgpack.so
+extension = inotify.so
 
 ; Directory where the temporary files should be placed.
 ; Defaults to the system default (see sys_get_temp_dir)
@@ -1948,3 +1951,27 @@ opcache.enable_cli=1
 opcache.enable=1
 opcache.validate_timestamps=1
 opcache.revalidate_freq=0
+
+
+[apm]
+apm.application_id="My application"
+apm.event_enabled=On
+apm.stats_duration_threshold="10"
+apm.stats_user_cpu_threshold="10"
+apm.stats_sys_cpu_threshold="10"
+apm.store_stacktrace=On
+apm.store_ip=On
+apm.store_cookies=On
+apm.store_post=On
+apm.dump_max_depth=1
+
+apm.mysql_enabled=1
+apm.mysql_error_reporting=E_ALL|E_STRICT
+apm.mysql_stats_enabled=1
+apm.mysql_process_silenced_events=On
+apm.mysql_exception_mode=1
+apm.mysql_host=localhost
+apm.mysql_port=3306
+apm.mysql_user=apm
+apm.mysql_pass=apm
+apm.mysql_db=apm
