--- a/fpm/config/phpfpm/php-fpm.conf
+++ b/fpm/config/phpfpm/php-fpm.conf
@@ -78,7 +78,7 @@ process_control_timeout = 0
 
 ; Send FPM to background. Set to 'no' to keep FPM in foreground for debugging.
 ; Default Value: yes
-daemonize = yes
+daemonize = no
 
 ; Set open file descriptor rlimit for the master process.
 ; Default Value: system defined value
