--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,3 @@
-*.ini linguist-language=docker
-*.conf linguist-language=docker
-*.d linguist-language=docker
-*.yml linguist-language=docker
-*.txt linguist-language=docker
-*.php linguist-language=docker
-*.html linguist-language=docker
+*.ini linguist-language=php
+*.conf linguist-language=php
+*.d linguist-language=php
