--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,11 @@ services:
       container_name: nginx-service #容器名称
   fpm: #php的fpm服务
       build:
-          context: ./fpm #dockerfile
+          context: ./php #dockerfile
       volumes:
           - ./web:/home/www #项目目录
-          - ./fpm/config/www:/usr/local/php/etc/php-fpm.d #配置文件映射
-          - ./fpm/config/phpfpm:/usr/local/php/etc #配置文件映射
+          - ./php/config/www:/usr/local/php/etc/php-fpm.d #配置文件映射
+          - ./php/config/phpfpm:/usr/local/php/etc #配置文件映射
       expose: #抛出的端口
           - "9000"
       environment:
@@ -32,7 +32,7 @@ services:
           - MYSQL_USER=slaveUser #创建用于主从复制的用户
           - MYSQL_PASSWORD=123456 #创建用于主从复制的用户的密码
       volumes:
-          - ./mariadb/master/data:/var/lib/mysql
+          - ./mariadb/master/data:/var/lib/mysql #数据永久挂载到宿主机
           - ./mariadb/master:/etc/mysql #配置文件映射
       container_name: master-mariadb-service #容器名称
   slavemariadb: #mariadb数据库从服务
@@ -43,7 +43,7 @@ services:
           - MYSQL_ROOT_PASSWORD=root #root用户密码
           - MYSQL_DATABASE=cig #默认创建数据库
       volumes:
-          - ./mariadb/slave/data:/var/lib/mysql
+          - ./mariadb/slave/data:/var/lib/mysql #数据永久挂载到宿主机
           - ./mariadb/slave:/etc/mysql #配置文件映射
       container_name: slave-mariadb-service #容器名称
   redis: #redis缓存数据库服务
@@ -56,7 +56,7 @@ services:
   mongo: #mongodb缓存数据库服务
       image: mongo #镜像
       volumes:
-         - ./mongodb/data:/data/db
+         - ./mongodb/data:/data/db #数据永久挂载到宿主机
       expose: #抛出的端口
          - "27017"
       container_name: mongodb-service #容器名称
