--- a/php/config/phpfpm/php-cli.ini
+++ b/php/config/phpfpm/php-cli.ini
@@ -740,7 +740,7 @@ extension_dir = "/usr/local/php/lib/php/extensions/no-debug-zts-20160303"
 
 extension = event.so
 extension = redis.so
-extension = pthreads.so
+;extension = pthreads.so
 extension = swoole.so
 extension = yaml.so
 extension = msgpack.so
